# tutor-contrib-k8s

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CHANGELOG.rst  K8s_resources.xlsx  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
tutork8s/: plugin.py
tutork8s/patches/: k8s-deployments
