[project]
name = "tutor-contrib-k8s"
description = "Helper plugin for Kubernetes deployments of Open edX"
authors = [
  { name = "Aulasneo", email = "andres@aulasneo.com" },
]
license = { text = "AGPLv3" }
license-files = []
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=21.0.0,<22.0.0",
]
dynamic = ["version"]

[project.urls]
Code = "https://github.com/aulasneo/tutor-contrib-k8s"
Issues = "https://github.com/aulasneo/tutor-contrib-k8s/issues"

[project.entry-points."tutor.plugin.v1"]
k8s = "tutork8s.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tutork8s/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tutork8s"]

[tool.hatch.build.targets.sdist]
strict-naming = false
include = ["/tutork8s", "/README.rst", "/LICENSE.txt", "/CHANGELOG.md"]
exclude = ["tests*"]
